--- a/voice/templates/index.html
+++ b/voice/templates/index.html
@@ -5,13 +5,16 @@
     <meta charset="UTF-8">
     <title>BIT QUERY SYSTEM</title>
     <style>
-        /* Custom CSS styles */
-        body {
-            background-color: lightblue;
-            font-family: Arial, sans-serif;
-            background-image: url('https://cutewallpaper.org/21/1920-x-1080-gif/1920x1080-Wallpapercartoon-Wallpapers-Driverlayer-Search-.gif');
+        
+body {
+    background-color: lightblue;
+    font-family: Arial, sans-serif;
+    background-image: url('D:/GitHub/BIT-Voice-Assistant-main/voice/images/background.jpg');
+    background-size: cover; /* To make sure the image covers the entire background */
+    background-repeat: no-repeat; /* To avoid repeating the image */
+}
 
-        }
+
 
         #container {
             width: 400px;
