new background setup

--- a/voice/templates/index.html
+++ b/voice/templates/index.html
@@ -6,13 +6,14 @@
     <title>BIT QUERY SYSTEM</title>
     <style>
         
-body {
-    background-color: lightblue;
-    font-family: Arial, sans-serif;
-    background-image: url('D:/GitHub/BIT-Voice-Assistant-main/voice/images/background.jpg');
-    background-size: cover; /* To make sure the image covers the entire background */
-    background-repeat: no-repeat; /* To avoid repeating the image */
-}
+        body {
+            background-color: lightblue;
+            font-family: Arial, sans-serif;
+            background-image: url("{{ url_for('static', filename='background.jpg') }}");
+         
+            background-size: cover; /* To make sure the image covers the entire background */
+            background-repeat: no-repeat; /* To avoid repeating the image */
+        }
 
 
 
